application-dashboard-traefikdashboard/k8s-dashboard-ingress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-web-ui
  namespace: kube-system
spec:
  ingressClassName: traefik-lb
  rules:
  - host: k8s-dashboard.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend: 
          service:
            name: k8dash-service
            port:
              number: 80
